# ai-agent

./: .gitignore  pyproject.toml
data/: generate_pdf.py
docs/: README.md
docs/langchain/: langchain.md
docs/pydantic/: pydantic_ai.md
langchain/01-basic/: 01-chat.py  02-single-turn.py  03-multi-turn.py  03a-multi-turn.py
langchain/02-deps-and-output/: 01-deps-and-output.py  01-state-and-output.py  02-json-output.py  02a-agent-output.py  02b-agent-output.py  03-validation.py
langchain/03-tool/: 01-tool.py  01a-agent.py  01a-executor.py  01b-agent.py  02-capability.py
langchain/04-workflow/: 01-delegation.py  02-handoff.py  02a-handoff-chain.py
langchain/05-graph/: 01-workflow.py  02-graph.py
langchain/06-rag/: 01-rag.py
langchain/07-advanced/: 02-time-travel.py
langchain/07-tradeoff/: 01-graph-resume.py
pydantic/01-basic/: 01-chat.py  02-single-turn.py  03-multi-turn.py
pydantic/02-deps-and-output/: 01-deps-and-output.py  01-state-and-output.py  02-json-output.py  03-validation.py
pydantic/03-tool/: 01-tool.py  02-capability.py
pydantic/04-workflow/: 01-delegation.py  02-handoff.py
pydantic/05-graph/: 01-workflow.py  02-graph.py
pydantic/06-rag/: 01-rag.py
